@@ -1,4 +1,9 @@
 Changes with Apache 2.0.31-dev
+
+  *) Change the pre_mpm hook to return a value, so that scoreboard
+     init errors percolate up to code that knows how to exit 
+     cleanly.  This required bump to the MMN.  [Jeff Trawick]
+
   *) Add the socket back to the conn_rec and remove the create_connection
      hook. The create_connection hook had a design flaw that did not 
      allow creating connections based on vhost info. [Bill Stoddard]
